# xcpc-rating

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh  第十八届四川省大学生程序设计竞赛 - 正式赛.xlsx
backend/: README.md
backend/data/: README.md
backend/data/import/: __init__.py  awards.py  config.py  formal.py  formal_store.py  models.py  players.py  weights.py  xcpcio_xlsx.py
backend/data/player/: __init__.py  api.py  cli.py  exceptions.py  models.py  service.py  store.py
backend/data/team/: __init__.py  api.py  cli.py  exceptions.py  models.py  service.py  store.py
backend/data/tests/: conftest.py  test_player_api.py  test_player_crud.py  test_team_crud.py
backend/site/: README.md
backend/utils/: __init__.py  plog.py
backend/utils/tests/: test_plog.py
data/: README.md
data/config/: README.md  contest_weights.yaml  school.yaml
data/raw/: README.md
data/raw/formal/: 2025_autumn_invitational.json  2025_icpc_hefei_regional.json  2026_ccpc_hunan_provincial.json  2026_ccpc_national_final.json  2026_sichuan_provincial.json  2026_spring_invitational.json
docs/: DESIGN.md  PROJECT_REVIEW.md  backend-player-module.md  backend.md  contest-weights.md  data-format.md  formal-import.md  player-module.md  skills.md  team-module.md  需求文档.txt
docs/design/: 01-选手模块.md  02-队伍模块.md  03-比赛与记录模块.md  04-数据导入与加工模块.md  04-数据流水线模块.md  05-Rating与榜单模块.md  05-数据导出与发布模块.md  06-Rating计算模块.md  06-前端展示模块.md  07-榜单模块.md  07-比赛权重.md  08-前端展示模块.md  README.md
skill/: README.md
skill/formal-import/: SKILL.md
skill/player-manage/: SKILL.md
skill/team-manage/: SKILL.md
(+9 files in other folders)
